[package]
name = "htlc-smart-contracts"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
base64 = "0.13.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release-with-logs]
inherits = "release"
debug-assertions = false
